--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -51,4 +51,12 @@
     <color name="darker_yellow">#d39f09</color>
     <color name="web_safe_yellow">#ffff00</color>
     <color name="desaturated_yellow">#e0b334</color>
+
+    <!--    new colors-->
+    <color name="colorPrimary">#BD6245</color>
+    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorAccent">#BD6245</color>
+    <color name="background">#F7E4BA</color>
+    <color name="button">#BD6245</color>
+    <color name="text">#FAF5EA</color>
 </resources>
