--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="300sp"
-        android:layout_height="300sp"
+        android:layout_height="320sp"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         app:cardBackgroundColor="@color/beige_transparent"
@@ -90,32 +90,46 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/passwordInput"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <Button
                     android:id="@+id/btnLogin"
-                    android:backgroundTint="@color/darker_beige"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginBottom="20dp"
-                    android:gravity="center"
                     android:text="@string/login"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/linear_layout_1"
+                    android:layout_marginHorizontal="15sp"
+                    android:background="@drawable/buttons"
                     android:textAllCaps="false"
-                    android:textColor="@color/white" />
+                    android:textSize="15sp"
+                    android:layout_marginVertical="4sp"
+                    android:textColor="@android:color/white"  />
 
                 <Button
                     android:id="@+id/btnRegister"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="30dp"
-                    android:backgroundTint="@color/darker_beige"
-                    android:layout_marginBottom="20dp"
-                    android:gravity="center"
                     android:text="@string/register"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/linear_layout_1"
+                    android:layout_marginHorizontal="15sp"
+                    android:background="@drawable/buttons"
                     android:textAllCaps="false"
-                    android:textColor="@color/white" />
+                    android:textSize="15sp"
+                    android:layout_marginVertical="4sp"
+                    android:textColor="@android:color/white"  />
+                <Button
+                    android:id="@+id/login_as_admin_btn"
+                    android:text="@string/login_as_admin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/linear_layout_1"
+                    android:layout_marginHorizontal="15sp"
+                    android:background="@drawable/buttons"
+                    android:textAllCaps="false"
+                    android:textSize="15sp"
+                    android:layout_marginVertical="4sp"
+                    android:textColor="@android:color/white"
+                    />
 
 
             </LinearLayout>
