--- a/app/src/main/res/navigation/yami_nav.xml
+++ b/app/src/main/res/navigation/yami_nav.xml
@@ -25,4 +25,9 @@
         android:name="lio.foody.yami.Home"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/loginFrag"
+        android:name="lio.foody.yami.LoginFrag"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login" />
 </navigation>
