--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,151 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--If Jesus comes back Now, are you entering heaven? or you need to change something now-->
+<!--There's a greatest victory in the below Verses, for everything that bothers you-->
 <!--Galatians 5:16-26 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/beige_transparent"
+    android:background="@color/light_beige"
     android:orientation="vertical"
     tools:context=".MainActivity">
+    <FrameLayout
+        android:id="@+id/fragmentContainerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/yami_nav" />
 
-    <TextView
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/berkshire_swash"
-        android:gravity="center"
-        android:text="Welcome to"
-        android:textColor="@color/black"
-        android:textSize="40sp" />
+        android:layout_height="60dp"
+        android:background="@color/background"
+        android:id="@+id/bottomNavigationView"
+        app:itemIconSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_menu"/>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="120sp"
-        android:layout_gravity="center"
-        android:src="@drawable/yamilogo" />
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="300sp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        app:cardBackgroundColor="@color/beige_transparent"
-        app:cardCornerRadius="20dp">
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/userIdIcon"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="35dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="22dp"
-                android:src="@drawable/ic_baseline_person_pin_24" />
-
-            <EditText
-                android:id="@+id/usernameInput"
-                android:layout_width="200sp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:layout_toRightOf="@id/userIdIcon"
-                android:fontFamily="serif"
-                android:hint="@string/username_hint"
-                android:inputType="textEmailAddress"
-                android:selectAllOnFocus="true"
-                android:textColor="@color/black"
-                android:textColorHint="@color/dark_grey" />
-
-            <ImageView
-                android:id="@+id/userPasswordIcon"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_below="@id/userIdIcon"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp"
-                android:src="@drawable/ic_baseline_lock_24" />
-
-            <EditText
-                android:id="@+id/passwordInput"
-                android:layout_width="200sp"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/usernameInput"
-                android:layout_toRightOf="@id/userPasswordIcon"
-                android:fontFamily="serif"
-                android:hint="@string/password_hint"
-                android:inputType="textPassword"
-                android:selectAllOnFocus="true"
-                android:textColor="@color/black"
-                android:textColorHint="@color/dark_grey" />
-
-            <LinearLayout
-                android:id="@+id/buttonsLogin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/passwordInput"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <Button
-                    android:id="@+id/btnLogin"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/linear_layout_1"
-                    android:layout_marginHorizontal="15sp"
-                    android:layout_marginVertical="4sp"
-                    android:background="@drawable/buttons"
-                    android:text="@string/login"
-                    android:textAllCaps="false"
-                    android:textColor="@android:color/white"
-                    android:textSize="15sp" />
-
-                <Button
-                    android:id="@+id/btnRegister"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/linear_layout_1"
-                    android:layout_marginHorizontal="15sp"
-                    android:layout_marginVertical="4sp"
-                    android:background="@drawable/buttons"
-                    android:text="@string/register"
-                    android:textAllCaps="false"
-                    android:textColor="@android:color/white"
-                    android:textSize="15sp" />
-
-                <Button
-                    android:id="@+id/login_as_admin_btn"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/linear_layout_1"
-                    android:layout_marginHorizontal="15sp"
-                    android:layout_marginVertical="4sp"
-                    android:background="@drawable/buttons"
-                    android:text="@string/login_as_admin"
-                    android:textAllCaps="false"
-                    android:textColor="@android:color/white"
-                    android:textSize="15sp" />
-
-
-            </LinearLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/buttonsLogin"
-                android:textColor="@color/dark_grey"
-                android:layout_centerHorizontal="true"
-                android:layout_marginVertical="10sp"
-                android:textStyle="italic"
-                android:clickable="true"
-                android:text="Forgot password?"/>
-
-        </RelativeLayout>
-
-    </androidx.cardview.widget.CardView>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
